# GeNotes_assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  download_models.sh  healthcheck.sh  nginx.conf  pyproject.toml  requirements.txt  workpackages.md
backend/: 2_chunking_embedding_ingestion.py  3_chatbot.py  README.md  pyproject.toml  requests.txt  requirements.txt  run.py  setup.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/endpoints/: __init__.py  chat.py  scrape.py  upload.py
backend/app/core/: chat.py  embeddings.py  scraping.py
backend/app/models/: __init__.py  schemas.py
data/: check_chroma.py  check_collections.py
data/chromadb/: chroma.sqlite3
data/datasets/: test_document.txt
docs/: ui_prototype.html
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: Navbar.tsx
frontend/src/pages/: DataPage.tsx  HomePage.tsx  VectorStorePage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: theme.ts
frontend/src/types/: chat.ts
nginx/: nginx.conf
nginx/conf.d/: default.conf
nginx/ssl/: localhost.crt  localhost.key
simple_streamlitt_app/: 3_chatbot.py
streamlitt_demo/: .env.example  1_scraping_data.py  example_retriever.py  readme.md
