[tool.poetry]
name = "genotes-assistant"
version = "0.1.0"
description = "GeNotes - Genomic Guidelines Assistant"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simple_streamlitt_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
httpx = "^0.27.0"
langchain = "^0.1.12"
langchain-community = "^0.0.27"
langchain-core = "^0.1.27"
langchain-openai = "^0.0.8"
chromadb = "^0.4.22"
sentence-transformers = "^2.2.2"
tiktoken = "^0.6.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.1"
pdfminer-six = "^20231228"
unstructured = "^0.13.0"
openpyxl = "^3.1.2"
pillow = "^10.2.0"
python-pptx = "^0.6.23"
python-magic = "^0.4.27"
python-slugify = "^8.0.1"
pyyaml = "^6.0.1"
structlog = "^24.1.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"
httpx = {extras = ["http2"], version = "^0.27.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\\.pyi?$'
