[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genotes_backend"
version = "0.1.0"
description = "Backend service for GeNotes Genomic Guidelines Assistant"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core dependencies
    "fastapi>=0.115.9",
    "uvicorn[standard]",
    "python-dotenv",
    "pydantic>=2.0.0",
    "python-multipart",
    
    # LangChain and AI/ML
    "langchain",
    "langchain-chroma",
    "langchain-core",
    "langchain-ollama",
    "chromadb",
    
    # Web scraping
    "beautifulsoup4",
    "requests",
    "httpx",
    
    # Utilities
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-dateutil",
    "PyYAML"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.setuptools]
packages = find:

[project.urls]
Homepage = "https://github.com/yourusername/genotes"
Bug Tracker = "https://github.com/yourusername/genotes/issues"
